# Distributional-Reduction

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
figs/: main_fig.py
local_ot/gromov/: _semirelaxed.py  _utils.py
local_ot/gromov_low_rank/: _semirelaxed.py  _utils.py
src/: affinities.py  benchmark_synthetic_geometry.py  clust_dr.py  dataset_pipeline.py  dimension_reduction.py  dr_grid.py  plot_results.py  replication.py  run_alpha_analysis.py  scores.py  test.ipynb  test.py  utils.py  utils_hyperbolic.py
