[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distributional-reduction"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Hugues Van Assel"},
    {name = "Cédric Vincent-Cuaz"},
    {name = "Nicolas Courty"},
    {name = "Rémi Flamary"},
    {name = "Pascal Frossard"},
    {name = "Titouan Vayer"}
]
dependencies = [
    "numpy",
    "torch",
    "matplotlib",
    "tqdm",
    "pillow",
    "scikit-learn",
    "geoopt",
    "pot",
    "networkx"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.setuptools]
packages = ["src", "local_ot"]

[tool.black]
line-length = 100
target-version = ['py37']
